syntax = "proto3";
package bean;

//messageType = 15
message SyncInform{
	int64 sessionId = 11;	//会话id
	int64 latestIndex = 12;	//最新的index
	int64 readIndex = 13;	//设备id
}
