syntax = "proto3";

option java_multiple_files = true;
option java_package = "IM.Rpc";
option java_outer_classname = "RpcProto";

package client;

// The greeting service definition.
service Rpc {
  // Sends a greeting
  rpc Rpc (RpcRequest) returns (RpcResponse) {}
}



message RpcRequest {
	uint64 Rid = 1;			//流水号
	ToServerType Type = 2;	//转发给的服务器     
	string AppId = 3;		//app唯一标识
	uint64 ConnId = 4;
	string UserId = 5;
	string Token = 6;

	int32 messageType = 12;	//消息类型
	bytes protoBuf = 13;	//消息对应的protoBuf数据
	
	enum ToServerType{
		BusinessServer = 0;     
		LogicServer = 1; 
	}
}


message RpcResponse {
	uint64 rid = 1;		//流水号
	string code = 2;	//回应的响应码
	string desc = 3;	//回应码的描述

	int32 messageType = 11;	//消息类型
	bytes protoBuf = 12;		//消息对应的protoBuf数据 
	uint64 connId = 13;
}





